[package]
name = "DT_Remastered"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.6"
derive_more = {version="0.99.16"}
rand = "0.8.5"
notan = {version = "0.7.1", features = ["text"] }
notan_ui = {path = "notan_ui"}
num = "0.4.0"
anyhow = "1.0.65"
ini = "1.3.0"
once_cell = "1.15.0"
