[workspace]
members = ["ini_core", "advini", "advini_derive", "math_thingies", "notan_ui", "ui", "dt_lib", "dt_editor", "dt_launcher", "dt_server", "quad_ui"]
resolver = "2"

[patch.crates-io] 
ahash = { "git" = "https://github.com/tkaitchuck/aHash.git", rev = "db36e4c" }

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1

[profile.dev]
debug = 2
lto = true
