[package]
name = "advini_derive"
version = "0.1.0"
edition = "2021"
[lib]
proc-macro = true
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = {version = "2.0.29", default-features=true, features = ["extra-traits"]}
