[package]
name = "dt_server"
version = "0.1.0"
edition = "2021"

[dependencies]
dt_lib = { path = "../dt_lib" }
axum = { version = "*", features = ["ws"] }
bincode = "1.3.3"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tokio-stream = "0.1.16"
tokio-tungstenite = "0.24.0"