[package]
name = "math_thingies"
version = "0.1.0"
edition = "2021"
description = "math thingies, traits. For self use"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolinator = "2.4.0"
num = "0.4.0"
alkahest = { git = "https://github.com/zakarumych/alkahest.git", rev = "99a5b68", features=["derive"] } 