[package]
authors = ["LedinecMing"]
name = "notan_ui"
version = "1.0.0"
edition = "2021"
description = "UI implementation on top of notan APIs"
license = "MIT"
repository = "https://github.com/LedinecMing/DiscordTimes_Remastered/tree/dev-master/notan_ui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
dyn-clone = "1.0.9"
notan = {version = "0.7.1", features = ["text"]}
math_thingies = {version = "0.1.0"}
