[package]
authors = ["LedinecMing"]
name = "notan_ui"
version = "1.0.1"
edition = "2021"
description = "UI implementation on top of notan APIs"
license = "MIT"
repository = "https://github.com/LedinecMing/DiscordTimes_Remastered/tree/dev-master/notan_ui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
dyn-clone = "1.0.9"
notan = {git = "https://github.com/Nazariglez/notan.git", features=["text"], rev="dbe1a0d"}
math_thingies = {version = "0.1.0"}
derive_builder = "0.12.0"
parking_lot = "0.12.1"