[package]
name = "quad_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.11"
dt_lib = {path = "../dt_lib/"}
ahash = { version = "0.8.11" }
once_cell = "1.19.0"
[package.metadata.android]
assets = "../dt/"
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
[package.metadata.android.activity_attributes]
"android:exported" = "true"
