[package]
name = "container_buttons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan = {git = "https://github.com/Nazariglez/notan.git", features=["text"], rev="dbe1a0d"}
notan_ui = {path = "../.."}
once_cell = "1.15.0"
